stuf/src/p3/tests/t161.err
Semantic error on line 8: Incorrect type (double) for initial value of variable 'some_number' of type (int).
